XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 3.5.0-rc1
    • Qt Creator 3.5.0-beta1, Qt Creator 3.5.0-rc1
    • None
    • OS X 10.10
      Ubuntu 14.04

    Description

      open Qt Creator sources in Qt Creator
      close Qt Creator

      Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
      0   libsystem_kernel.dylib        	0x00007fff911c3286 __pthread_kill + 10
      1   libsystem_c.dylib             	0x00007fff945b1b53 abort + 129
      2   libsystem_malloc.dylib        	0x00007fff945e5937 free + 428
      3   libQmakeProjectManager_debug.dylib	0x000000011043efa2 QmakeProjectManager::Internal::QmakeProjectImporter::~QmakeProjectImporter() + 34 (qmakeprojectimporter.h:47)
      4   libProjectExplorer_debug.dylib	0x000000010c6171a3 ProjectExplorer::Internal::TargetSettingsPanelWidget::~TargetSettingsPanelWidget() + 83 (targetsettingspanel.cpp:122)
      5   libProjectExplorer_debug.dylib	0x000000010c6171e5 ProjectExplorer::Internal::TargetSettingsPanelWidget::~TargetSettingsPanelWidget() + 21 (targetsettingspanel.cpp:122)
      6   libProjectExplorer_debug.dylib	0x000000010c617239 ProjectExplorer::Internal::TargetSettingsPanelWidget::~TargetSettingsPanelWidget() + 25 (targetsettingspanel.cpp:120)
      7   libProjectExplorer_debug.dylib	0x000000010c5918f2 void qDeleteAll<QWidget* const*>(QWidget* const*, QWidget* const*) + 66 (qalgorithms.h:318)
      8   libProjectExplorer_debug.dylib	0x000000010c58f8fe void qDeleteAll<QVector<QWidget*> >(QVector<QWidget*> const&) + 46 (qalgorithms.h:326)
      9   libProjectExplorer_debug.dylib	0x000000010c58be57 ProjectExplorer::Internal::WidgetCache::deregisterProject(ProjectExplorer::Project*) + 167 (projectwindow.cpp:259)
      10  libProjectExplorer_debug.dylib	0x000000010c58acc5 ProjectExplorer::Internal::WidgetCache::clear() + 69 (projectwindow.cpp:389)
      11  libProjectExplorer_debug.dylib	0x000000010c58ac32 ProjectExplorer::Internal::ProjectWindow::aboutToShutdown() + 50 (projectwindow.cpp:102)
      12  libProjectExplorer_debug.dylib	0x000000010c51d9a8 ProjectExplorer::ProjectExplorerPlugin::aboutToShutdown() + 120 (projectexplorer.cpp:1514)
      13  libExtensionSystem_debug.1.0.0.dylib	0x0000000103e36a0f ExtensionSystem::Internal::PluginSpecPrivate::stop() + 79 (pluginspec.cpp:1041)
      14  libExtensionSystem_debug.1.0.0.dylib	0x0000000103e1cf69 ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) + 1497 (pluginmanager.cpp:1399)
      15  libExtensionSystem_debug.1.0.0.dylib	0x0000000103e1c92e ExtensionSystem::Internal::PluginManagerPrivate::stopAll() + 350 (pluginmanager.cpp:918)
      16  libExtensionSystem_debug.1.0.0.dylib	0x0000000103e1804c ExtensionSystem::Internal::PluginManagerPrivate::shutdown() + 28 (pluginmanager.cpp:1248)
      17  libExtensionSystem_debug.1.0.0.dylib	0x0000000103e18028 ExtensionSystem::PluginManager::shutdown() + 24 (pluginmanager.cpp:441)
      18  libExtensionSystem_debug.1.0.0.dylib	0x0000000103e4a244 ExtensionSystem::PluginManager::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) + 212 (moc_pluginmanager.cpp:100)
      19  org.qt-project.QtCore         	0x00000001051fd769 QMetaObject::activate(QObject*, int, int, void**) + 2953
      20  org.qt-project.QtCore         	0x00000001051cd5a6 QCoreApplication::exec() + 390
      21  org.qt-project.qtcreator      	0x0000000103ddf32b main + 13291
      22  org.qt-project.qtcreator      	0x0000000103dd8294 start + 52
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dt Daniel Teske
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes